Cleaned up CompositeClassLoader and dependent code